<resources>
    <string name="app_name">ALC4</string>
    <string name="welcome_message">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_name">Stephen K</string>
    <string name="track">Track:</string>
    <string name="country">Country:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone Number:</string>
    <string name="slack_username">Slack Username:</string>
    <string name="track_name">Android</string>
    <string name="country_name">Kenya</string>
    <string name="email_address">stephenarchimedes@outlook.com</string>
    <string name="phone_number">254700104490</string>
    <string name="slack_username_value">\@Stephen K</string>
    <string name="image_description">Profile Image</string>
    <string name="toolbar_title_a">ALC 4 Phase 1</string>
    <string name="toolbar_title_b">About ALC</string>
    <string name="toolbar_title_c">My Profile</string>
    <string name="retry">Retry</string>
    <string name="ssl_error">Ssl Error encountered, proceed with caution</string>
    <string name="load_error">Oops! An error occurred!</string>
    <string name="proceed">Continue</string>
    <string name="cancel">Cancel</string>
</resources>
